--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -220,15 +220,14 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 0.8rem;
+            gap: 0.4rem;
             background-color: #3b3b3b;
             border: 3px double #555;
             border-radius: 12px;
-            padding: 0.8rem 1rem;
             box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.08);
             margin: 0 auto;
+            padding: 0.2rem 0.7rem;
         }
-
         .cube-controls-block .cube-shown-selector,
         .cube-controls-block .cube-owner-selector,
         .cube-controls-block .cube-value-options,
@@ -266,14 +265,6 @@
             align-items: center;
             gap: 0.5rem;
         }
-
-        .game-type label {
-            color: white;
-            font-size: 1rem;
-            width: 6rem;
-            text-align: center;
-        }
-
 
         #game-type-button {
             font-family: Arial, sans-serif;
@@ -689,7 +680,7 @@
         }
 
         .selector-size {
-            width: 60px;
+            width: 40px;
             height: 30px;
             font-size: 0.8rem;
             padding: 0.3125rem;
@@ -723,6 +714,7 @@
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
+            margin-left: 0.2rem;
         }
 
         .cube-value-options {
@@ -1137,7 +1129,7 @@
         }
         .cube-controls-labels label {
             color: white;
-            font-size: 0.8rem;
+            font-size: 0.7rem;  
             text-align: left;
             flex-shrink: 0;
         }
@@ -1202,7 +1194,7 @@
             <div class="cube-controls-block-wrapper">
             <div class="cube-controls-labels">
                 <label for="cube-shown-select">Показан куб?</label>
-                <label for="cube-value-select">Значение куба</label>
+                <label for="cube-value-select">Куб</label>
                 <label for="cube-owner-select-btn">Чей куб?</label>
                 <label for="max-cube-select">Макс куб</label>
             </div>
