--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1126,6 +1126,7 @@
             display: flex;
             flex-direction: row;
             gap: 0.5rem;
+            padding-bottom: 0.2rem  ;
         }
         .cube-controls-labels label {
             color: white;
