--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -551,6 +551,15 @@
             background-color: #3a3a3a;
             border-color: #555;
         }
+        .game-type-right {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            margin-left: 10%;
+        }
+        .game-type-right label {
+            text-align: center;
+        }
 
         .checker-toggle-btn {
             width: 3em;
