--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1193,6 +1193,7 @@
         <div class="game-type">
             <div class="jb-wrap">
                 <div class="jb-title">Якоби / Бивер</div>
+                <div class="max-cube-options" id="max-cube-options-match" style="display: none;"></div>
                 <div class="jacobi-beaver-block">
                     <div class="jb-row">
                         <button type="button" class="toggle-btn on" data-target="jacobi-select">1</button>
@@ -1200,6 +1201,16 @@
                     </div>
                     <input type="hidden" id="jacobi-select" value="1">
                     <input type="hidden" id="beaver-select" value="0">
+                    <div class="max-cube-options_money" id="max-cube-options-money">
+                        <div>
+                            <select id="max-cube-select-m" class="selector-size">
+                                <option value="1">2</option>
+                                <option value="2">4</option>
+                                <option value="3" selected>8</option>
+                                <option value="4">16</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="cube-controls-block-wrapper">
@@ -1261,26 +1272,6 @@
                 <div class="cube-owner-selector">
                     <input type="hidden" id="cube-owner-select" value="white">
                     <button type="button" id="cube-owner-select-btn" class="checker-toggle-btn white" data-target="cube-owner-select" aria-label="Чей куб?" data-color="white"></button>
-                </div>
-                <div class="max-cube-options" id="max-cube-options-match" style="display: none;">
-                    <div>
-                        <select id="max-cube-select" class="selector-size">
-                            <option value="2">2</option>
-                            <option value="4">4</option>
-                            <option value="8" selected>8</option>
-                            <option value="16">16</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="max-cube-options_money" id="max-cube-options-money">
-                    <div>
-                        <select id="max-cube-select-m" class="selector-size">
-                            <option value="1">2</option>
-                            <option value="2">4</option>
-                            <option value="3" selected>8</option>
-                            <option value="4">16</option>
-                        </select>
-                    </div>
                 </div>
             </div>
             </div>
