--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1193,7 +1193,7 @@
         <div class="game-type">
             <div class="jb-wrap">
                 <div class="jb-title">Якоби / Бивер</div>
-                <div class="max-cube-options" id="max-cube-options-match" style="display: none;"></div>
+                <label for="max-cube-select">Макс куб</label>
                 <div class="jacobi-beaver-block">
                     <div class="jb-row">
                         <button type="button" class="toggle-btn on" data-target="jacobi-select">1</button>
