--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -370,6 +370,9 @@
             border: 0.05em solid #222;
             padding: 0;
             text-align: center;
+            display: inline-block;
+            width: 1.8em;
+            height: 1.8em;
             font-size: 1em;
             font-weight: bold;
             cursor: pointer;
