--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -167,6 +167,7 @@
             justify-content: center;
             align-items: center;
             padding-top: 2rem;
+            font-size: clamp(0.7rem, 1.5vw, 1.1rem);
             box-sizing: border-box;
             max-width: 100%;
             overflow-x: clip;
@@ -291,7 +292,7 @@
             align-items: center;
             gap: 0.2em;
             flex-shrink: 0;
-            font-size: 30px;
+            font-size: 1em;
         }
 
         .checker-options {
@@ -345,7 +346,7 @@
             gap: 0.2em;
             color: white;
             flex-shrink: 0;
-            font-size: 30px;
+            font-size: 1em;
         }
 
         .bar-options {
