--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -870,7 +870,7 @@
                 </div>
                 
                 <!-- Блок 2: На баре -->
-                <div class="bar-selector" data-order="2">
+                <div class="bar-selector" data-order="1">
                     <div class="bar-label">На баре</div>
                     <div class="bar-options">
                         <div class="bar-checker">
