--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -301,7 +301,7 @@
             align-items: center;
             gap: 0.2em;
             flex-shrink: 0;
-            font-size: 2em;
+            font-size: 3em;
         }
 
         .checker-options {
@@ -355,7 +355,7 @@
             gap: 0.2em;
             color: white;
             flex-shrink: 0;
-            font-size: 2em;
+            font-size: 3em;
         }
 
         .bar-options {
@@ -381,8 +381,8 @@
             padding: 0;
             text-align: center;
             display: inline-block;
-            width: 1.8em;
-            height: 1.8em;
+            width: 1.2em;
+            height: 1.2em;
             font-size: 1em;
             font-weight: bold;
             cursor: pointer;
