--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backgammon Board Editor</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -1532,9 +1532,9 @@
                 </div>
             </div>
             <div class="action-buttons">
-                <button id="clear-button"><i class="fas fa-trash-alt"></i></button>
-                <button id="init-button"><i class="fas fa-home"></i></button>
-                <button id="show-button"><i class="fas fa-eye"></i></button>
+                <button id="clear-button"><i class="fa fa-trash"></i></button>
+                <button id="init-button"><i class="fa fa-home"></i></button>
+                <button id="show-button"><i class="fa fa-eye"></i></button>
             </div>
         </div>
         <div class="right-panel2">
